--- a/portfolio.html
+++ b/portfolio.html
@@ -32,19 +32,19 @@
 
 <section class="d-flex justify-content-center">
 
-            <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
-            <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
+            <img style="margin:20px" src="images/1.png" alt="..." class="img-thumbnail"> 
+            <img style="margin:20px" src="images/2.png" alt="..." class="img-thumbnail">
         </section>
 
         <section class="d-flex justify-content-center">
-            <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
-            <img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
+            <img style="margin:20px" src="images/3.png" alt="..." class="img-thumbnail">
+            <img style="margin:20px" src="images/4.png" alt="..." class="img-thumbnail">
         </section>
 
         <section class="d-flex justify-content-center">
 
-<img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
-<img src="https://via.placeholder.com/150" alt="..." class="img-thumbnail">
+<img style="margin:20px" src="images/5.png" alt="..." class="img-thumbnail">
+<img style="margin:20px" src="images/6.png" alt="..." class="img-thumbnail">
 
 </section>
 
