added password generator

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
 
 <section class="d-flex justify-content-center">
 
-            <img style="margin:20px" src="images/1.png" alt="..." class="img-thumbnail"> 
+            <a href="password-generator/develop/index.html">
+              <img style="margin:20px" src="password-generator/Assets/1.png" alt="..." class="img-thumbnail">
+            </a>
             <img style="margin:20px" src="images/2.png" alt="..." class="img-thumbnail">
         </section>
 
