new cards for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,25 +30,34 @@
             <br>
             <br>
 
-<section class="d-flex justify-content-center">
 
-            <a href="password-generator/Develop/index.html">
-              <img style="margin:20px" src="images/1.png" alt="..." class="img-thumbnail">
-            </a>
-            <img style="margin:20px" src="images/2.png" alt="..." class="img-thumbnail">
-        </section>
 
-        <section class="d-flex justify-content-center">
-            <img style="margin:20px" src="images/3.png" alt="..." class="img-thumbnail">
-            <img style="margin:20px" src="images/4.png" alt="..." class="img-thumbnail">
-        </section>
+            <!-- <a href="password-generator/Develop/index.html"> -->
+              <div class="card-deck mx-auto" style="width: 70rem;">
+                <div class="card">
+                  <img class="card-img-top" src="images/03-javascript-homework-demo.png" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Password Generator</h5>
+                    <p class="card-text">Choose a secure pasword between 8-128 characters.</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="https://github.com/waltribeiro/password-generator" class="btn btn-primary" style="margin-right:20px" target="_blank">Github</a>
+                    <a href="https://waltribeiro.github.io/password-generator" class="btn btn-primary" target="_blank">Demo</a>
+                  </div>
+                </div>
 
-        <section class="d-flex justify-content-center">
-
-<img style="margin:20px" src="images/5.png" alt="..." class="img-thumbnail">
-<img style="margin:20px" src="images/6.png" alt="..." class="img-thumbnail">
-
-</section>
+                <div class="card">
+                  <img class="card-img-top" src="images/03-javascript-homework-demo-2.png" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Placeholder text</h5>
+                    <p class="card-text">Placeholder text</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" style="margin-right:20px" class="btn btn-primary">Github</a><a href="#" class="btn btn-primary">Demo</a>
+                  </div>
+                </div>
+                
+              </div>
 
 <br>
 <br>
