--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                     <p class="card-text">Placeholder text</p>
                   </div>
                   <div class="card-footer">
-                    <a href="#" style="margin-right:20px" class="btn btn-primary">Github</a><a href="#" class="btn btn-primary">Demo</a>
+                    <a href="#" style="margin-right:20px" class="btn btn-secondary">Github</a><a href="#" class="btn btn-secondary">Demo</a>
                   </div>
                 </div>
                 
