updated portfolio page

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
       </form>
     </main>
     
-    <footer id="sticky-footer" style="border-top: 10px solid #59aaa5;" class="py-4 bg-dark text-light">
+    <footer id="sticky-footer" style="border-top: 10px solid #59aaa5;" class="py-4 bg-dark text-light fixed-bottom">
       <div class="container text-center">
         <small>Website designed by Walt Ribeiro</small>
       </div>
