--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 <br>
 <br>
 <br>
 <br>
-<footer id="sticky-footer" style="border-top: 10px solid #59aaa5;" class="py-4 bg-dark text-light">
+
+    <footer id="sticky-footer" style="border-top: 10px solid #59aaa5;" class="py-4 bg-dark text-light fixed-bottom">
   <div class="container text-center">
     <small>Website designed by Walt Ribeiro</small>
   </div>
