wrapped a link around the image

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,11 +39,13 @@
         <h5 class="card-title text-center" style="margin-top:10px">
           Password Generator
         </h5>
+        <a
+        href="https://waltribeiro.github.io/password-generator">
         <img
           class="card-img-top"
           src="images/03-javascript-homework-demo-3.png"
-          alt="Card image cap"
-        />
+          alt="Card image cap"/>
+      </a>
         <div class="card-body">
           <p class="card-text">
             Choose a secure password between 8-128 characters.
@@ -54,14 +56,14 @@
             href="https://github.com/waltribeiro/password-generator"
             class="btn btn-primary"
             style="margin-right:20px"
-            target="_blank"
-            >Github</a
-          >
+            target="_blank">
+            Github
+          </a>
           <a
             href="https://waltribeiro.github.io/password-generator"
-            class="btn btn-primary"
-            >Demo</a
-          >
+            class="btn btn-primary">
+            Demo
+          </a>
         </div>
 
         <!-- <div class="card mb-4">
@@ -81,15 +83,17 @@
         <img
           class="card-img-top"
           src="images/03-javascript-homework-demo-2.png"
-          alt="Card image cap"
-        />
+          alt="Card image cap"/>
         <div class="card-body">
           <p class="card-text">Placeholder text</p>
         </div>
         <div class="card-footer">
-          <a href="#" style="margin-right:20px" class="btn btn-secondary"
-            >Github</a
-          ><a href="#" class="btn btn-secondary">Demo</a>
+          <a href="#" style="margin-right:20px" class="btn btn-secondary">
+            Github
+          </a>
+          <a href="#" class="btn btn-secondary">
+            Demo
+          </a>
         </div>
       </div>
     </div>
