fixed portfolio width

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
     <br />
 
     <!-- <a href="password-generator/Develop/index.html"> -->
-    <div class="card-deck mx-auto" style="width: 70rem;">
+    <div class="card-deck mx-auto" style="width: 80%;">
       <div class="card">
         <h5 class="card-title text-center" style="margin-top:10px">
           Password Generator
