--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="backgroundImage">
@@ -80,18 +79,21 @@
         <h5 class="card-title text-center" style="margin-top:10px">
           Placeholder Text
         </h5>
+        <a
+        href="http://waltribeiro.github.io/pearl-jam-quiz/">
         <img
           class="card-img-top"
           src="images/03-javascript-homework-demo-2.png"
           alt="Card image cap"/>
+        </a>
         <div class="card-body">
           <p class="card-text">Placeholder text</p>
         </div>
         <div class="card-footer">
-          <a href="#" style="margin-right:20px" class="btn btn-secondary">
+          <a href="https://github.com/waltribeiro/pearl-jam-quiz" style="margin-right:20px" class="btn btn-secondary">
             Github
           </a>
-          <a href="#" class="btn btn-secondary">
+          <a href="http://waltribeiro.github.io/pearl-jam-quiz/" class="btn btn-secondary">
             Demo
           </a>
         </div>
@@ -108,16 +110,14 @@
       tabindex="-1"
       role="dialog"
       aria-labelledby="portfolioModal9Label"
-      aria-hidden="true"
-    >
+      aria-hidden="true">
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <button
             type="button"
             class="close"
             data-dismiss="modal"
-            aria-label="Close"
-          >
+            aria-label="Close">
             <span aria-hidden="true">
               <i class="fas fa-times"></i>
             </span>
@@ -129,8 +129,7 @@
                 <div class="col-lg-8">
                   <!-- Portfolio Modal - Title -->
                   <h2
-                    class="portfolio-modal-title text-secondary text-uppercase mb-0"
-                  >
+                    class="portfolio-modal-title text-secondary text-uppercase mb-0">
                     Password Generator
                   </h2>
                   <br />
@@ -146,8 +145,7 @@
                           readonly
                           id="password"
                           placeholder="Your Secure Password"
-                          aria-label="Generated Password"
-                        ></textarea>
+                          aria-label="Generated Password"></textarea>
                       </div>
                       <div class="password-card-footer">
                         <p id="afterText"></p>
@@ -170,8 +168,7 @@
     <footer
       id="sticky-footer"
       style="border-top: 10px solid #59aaa5;"
-      class="py-4 bg-dark text-light fixed-bottom"
-    >
+      class="py-4 bg-dark text-light fixed-bottom">
       <div class="container text-center">
         <small>Website designed by Walt Ribeiro</small>
       </div>
