updated button colors

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,17 +83,17 @@
         href="http://waltribeiro.github.io/pearl-jam-quiz/">
         <img
           class="card-img-top"
-          src="images/03-javascript-homework-demo-2.png"
+          src="images/pearl-jam-fan.png"
           alt="Card image cap"/>
         </a>
         <div class="card-body">
-          <p class="card-text">Placeholder text</p>
+          <p class="card-text">Pear Jam Quiz</p>
         </div>
         <div class="card-footer">
-          <a href="https://github.com/waltribeiro/pearl-jam-quiz" style="margin-right:20px" class="btn btn-secondary">
+          <a href="https://github.com/waltribeiro/pearl-jam-quiz" style="margin-right:20px" class="btn btn-primary">
             Github
           </a>
-          <a href="http://waltribeiro.github.io/pearl-jam-quiz/" class="btn btn-secondary">
+          <a href="http://waltribeiro.github.io/pearl-jam-quiz/" class="btn btn-primary">
             Demo
           </a>
         </div>
