--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
 
       <div class="card">
         <h5 class="card-title text-center" style="margin-top:10px">
-          Placeholder Text
+          Pearl Jam Quiz
         </h5>
         <a
         href="http://waltribeiro.github.io/pearl-jam-quiz/">
@@ -87,7 +87,7 @@
           alt="Card image cap"/>
         </a>
         <div class="card-body">
-          <p class="card-text">Pear Jam Quiz</p>
+          <p class="card-text">Test your Pearl Jam fandom in 60 seconds</p>
         </div>
         <div class="card-footer">
           <a href="https://github.com/waltribeiro/pearl-jam-quiz" style="margin-right:20px" class="btn btn-primary">
