new portfolio link

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
           Pearl Jam Quiz
         </h5>
         <a
-        href="http://waltribeiro.github.io/pearl-jam-quiz/">
+        href="https://waltribeiro.github.io/pearl-jam-quiz/Develop/index.html">
         <img
           class="card-img-top"
           src="images/pearl-jam-fan.png"
@@ -93,7 +93,7 @@
           <a href="https://github.com/waltribeiro/pearl-jam-quiz" style="margin-right:20px" class="btn btn-primary">
             Github
           </a>
-          <a href="http://waltribeiro.github.io/pearl-jam-quiz/" class="btn btn-primary">
+          <a href="https://waltribeiro.github.io/pearl-jam-quiz/Develop/index.html" class="btn btn-primary">
             Demo
           </a>
         </div>
